tests/ParserTests/Good/Good09.hpr
module A where
import B
a :: Int
a = 5
