tests/ParserTests/Bad/Bad06.hpr
module A where
Foo :: Int
